syntax = "proto3";
package asm;
option go_package = "./;pb";
import "customer.proto";

service BookingService{
    rpc CreateBooking(Booking) returns (Booking);
    rpc FindBookingByCode(BookingRequest) returns (BookingInformation);
    rpc CancelBooking(CancelRequest) returns (Booking);
}

message Booking{
    string id = 1;
    string customer_id = 2;
    string code = 4;
    int64 status = 5;
}

message CancelRequest {
    string code = 1;
}

message BookingRequest {
    string code = 1;
}

message BookingInformation {
    Customer customer_detail = 1;
    Booking booking_detail = 2;
}

